@@ -1,3 +1,7 @@
+2007-09-30  Badlop  <badlop@ono.com>
+
+	* src/mod_multicast.erl: Huge performance optimization on route_* functions.
+
 2007-09-29  Badlop  <badlop@ono.com>
 
 	* src/mod_multicast.erl: Huge reorganization of do_route* functions.
